@@ -114,7 +114,7 @@ namespace kt
 				case LAST_PRIORITY:	
 					return InfoWidgetPluginSettings::lastColor();
 				case NORMAL_PRIORITY:
-					return InfoWidgetPluginSettings::normalColor();
+					return QVariant();
 				case ONLY_SEED_PRIORITY: 
 				case EXCLUDED: 
 				case PREVIEW_PRIORITY: 
